@@ -123,7 +123,6 @@ my @expected_files = qw(
     xt/author/kwalitee.t
     xt/author/minimum-version.t
     xt/author/pod-spell.t
-    xt/author/changes_has_content.t
     xt/author/clean-namespaces.t
     xt/release/changes_has_content.t
     xt/release/cpan-changes.t
